# Resosyn

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Resosyn.jucer  prd.md
.github/: CI.md
.github/workflows/: build.yml
Source/: FilterResponseDisplay.h  HarmonicEditorContent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: FilterBank.h  NoiseGenerator.h  Voice.h  VoiceManager.h  VoiceParameters.h  WavetableOscillator.h
